jaggeryapps/admin/css/styles.css
/* ... */
.app-content-section {
    margin-top: 105px;
}
.app-list {
    padding-bottom: 100px;
}
.left-pane ul {
    margin-top: 70px;
    list-style: none;
    padding-left: 0;
    -webkit-margin-after: 0em;
    -webkit-margin-start: 0px;
    -webkit-margin-end: 0px;
    -webkit-padding-start: 0px;
}
.left-pane ul li {
    cursor: pointer;
}
.left-pane ul li i {
    padding-right: 10px;
    font-size: 1.5em;
}
.left-pane ul li:hover > a{
    background-color: #101010;
}

.left-pane ul li ul{
    margin-top:0px;
}
.left-pane ul li ul li a{
    background-color: #222;
    padding-left:46px;
}
.left-pane ul li ul li a:hover {
    background-color: #1b1b1b;
}
.left-pane ul li.active a{
    color: #0498d5;
}
.left-pane a{
    color: #fff;
    display: block;
    padding: 16px 22px 18px;
}

.left-pane a:hover{
    color: #fff;
    text-decoration: none;
}

.block-anch:hover{
    text-decoration: none;
    cursor: pointer;
    color: #e3e3e3;
}

.block-general {
    margin-top: 1em;
    /*background-color: #34495e;*/
    background-color: #2f343a;
    padding-top: 1em;
    padding-bottom: 1em;
    min-height: 33em;
}

.block-general a, .block-team a, .block-database a, .block-default a,.block-apis a{
    color:#fff;
}
.block-default h3,.block-apis h3{
    text-align:center;
}
.block-general h3,
.block-team h3,
.block-database h3,
.block-default h3,
.block-apis h3{
    font-weight: 300;
    margin-top: 8px;
}
.block-team h3, .block-database h3{
    margin-top:3px;
}
.block-general h3,.block-default h3,.block-apis h3{
    margin-bottom: 30px;
}
.version-number button{
    color:#fff;
    background-color:#757575;
    border:none;
    padding:10px 22px;
}
.version-number .dropdown-menu{
    margin:0px;
    border:none;
    -webkit-border-radius: 0px;
    -moz-border-radius: 0px;
    border-radius: 0px;
}
.version-url {
    float: left;
    padding: 10px;
    background-color: #8b8b8b;
    border-color: transparent;
    max-width: 62%;
    min-width: 40%;
}
.version-url>a>span{
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    display: block;
}
.url-loading i{
    float: left;
    margin: 2px 3px;
}
.url-loading i:before,.url-loading i {
    -webkit-animation: fw-hide 2s cubic-bezier(0, -2.15, 0.2, 0.32) infinite;
    animation: fw-hide 2s cubic-bezier(0, -2.15, 0.2, 0.32) infinite;
    -moz-animation: fw-hide 2s infinite;
}
.url-loading span:after{
    overflow: hidden;
    display: inline-block;
    vertical-align: bottom;
    -moz-animation: ellipsis 2s infinite;
    -webkit-animation: ellipsis 2s infinite;
    animation: ellipsis 2s infinite;
    content: "\2026"; /* ascii code for the ellipsis character */
}

@keyframes fw-hide {
    0%, 30%  {
        opacity: 0;
    }
    40% {
        opacity: 1;
    }
    100% {
        opacity: 0;
    }
}
@keyframes fade-pulse {
    0% {
        opacity: 1;
    }
    20% {
        opacity: .6;
    }
    100% {
        opacity: 1;
    }
}

@keyframes ellipsis {
    from {
        width: 2px;
    }
    to {
        width: 15px;
    }
}
.block-default-color{
    background-color: #666;
}
.block-color-1{
    background-color: #03A678 !important;
}
.block-color-2{
    background-color: #E26A6A !important;
}
.block-color-3{
    background-color: #34495E !important;
}
.block-apis{
    min-height: 20em;
    margin-top: 1em;
}
.block-apis > div{
    padding: 1em 0em;
    min-height: 20em;
}
.block-default{
    min-height: 20em;
    margin-top: 1em;
    padding: 1em;
}
.block-replicas{
    min-height: 16em;
    max-height: 16em;
    margin-top: 1em;
    padding: 1em;
    border-right: 1px dashed rgba(255, 255, 255, 0.21);
    width: 230px;
    float: left;
}
.block-replicas:last-child{
    border:none;
}
.view-log{
    font-size: 11px;
    background-color: #343434;
    padding: .5em;
}
.node-cicle:hover{
    color: white;
}
.node-cicle span{
    cursor: pointer;
}

.node-cicle {
    position: relative;
    display: inline-block;
    color: #999;
    font-size: 20px;
    text-align: center;
}

.node-cicle figcaption {
    padding: 50px 25px;
    width: 190px;
    height:190px;
    border: 20px solid rgba(240, 240, 240, 0.2);
    border-radius: 100px;
    line-height: 50px;
}


svg .outer {
    stroke: #2ecc71;
}

.node-cicle svg {
    position: absolute;
    top: 0;
    left: 0;
}

.outer {
    fill: transparent;
    stroke: #333;
    stroke-width: 20;
    stroke-dasharray: 534;
    transition: stroke-dashoffset 1s;
    -webkit-animation-play-state: running;
    /* firefox bug fix - won't rotate at 90deg angles */
    -moz-transform: rotate(-89deg) translateX(-190px);
}

.node-cicle[data-percent='100'] .outer {
    stroke-dashoffset: 0;
    -webkit-animation: show100 2s;
    animation: show100 2s;
}

@-webkit-keyframes show100 {
    from {
        stroke-dashoffset: 537;
    }
    to {
        stroke-dashoffset: 0;
    }
}

@keyframes show100 {
    from {
        stroke-dashoffset: 537;
    }
    to {
        stroke-dashoffset: 0;
    }
}



.block-life-cycle,
.block-repos,
.block-issues,
.block-runtime,
.block-monitoring,
.block-team,
.block-replica,
.block-database {
    margin-top: 1em;
    padding: 18px;
}
.block-team {
    background-color: #95a5a6;
}
.block-database {
    background-color: #0090d9;
}
.block-life-cycle {
    background-color: #2f343a;
    min-height: 24em;
}

.block-repos {
    background-color: #735f87;
    min-height: 24em;
}
.block-issues, .block-monitoring {
    background-color: #0aa699;
    min-height: 24em;
}
.block-runtime{
    background-color: #e67e22;
    min-height: 24em;
}
.block-replica {
    background-color: #464646;
    min-height: 24em;
}
.block-msg{
    background-color: #464646;
    font-size: 1em;
    padding: 30px 15px;
}
.block-msg a {
    text-decoration: none;
}
.block-action-button {
    width: 100%;
    margin-top:10px;
    text-align: right;
    float: right;
    padding: 8px;
    cursor: pointer;
    background-color: #383d44;
    text-decoration: none;
}
/* ... */

